--- a/pom.xml
+++ b/pom.xml
@@ -15,5 +15,10 @@
   </properties>
 
   <dependencies>
+  	<dependency>
+		<groupId>org.apache.httpcomponents</groupId>
+		<artifactId>httpclient</artifactId>
+		<version>4.3.5</version>
+	</dependency>
   </dependencies>
 </project>
