KeepAliveHttpClientsTest.doKeepAliveRequest() - 测试[模拟"Keep-Alive" HTTP连接失效过期而被关闭，会重新握手连接]的场景

--- a/pom.xml
+++ b/pom.xml
@@ -20,5 +20,12 @@
 		<artifactId>httpclient</artifactId>
 		<version>4.3.5</version>
 	</dependency>
+	
+	<dependency>
+		<groupId>org.testng</groupId>
+		<artifactId>testng</artifactId>
+		<version>6.8.8</version>
+		<scope>test</scope>
+	</dependency>
   </dependencies>
 </project>
