--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,15 @@
 	</dependency>
 	
 	<!-- ======================================= -->
+	<!-- HTML 解析框架 -->
+	<!-- ======================================= -->
+	<dependency>
+		<groupId>org.jsoup</groupId>
+		<artifactId>jsoup</artifactId>
+		<version>1.7.3</version>
+	</dependency>
+	
+	<!-- ======================================= -->
 	<!-- 测试（Test）框架 -->
 	<!-- ======================================= -->
 	<dependency>
