--- a/src/main/resource/http.config.properties
+++ b/src/main/resource/http.config.properties
@@ -1,6 +1,5 @@
-taobao.login.host=login.taobao.com
+http.max.per.route=100
+
 taobao.ssl.cert.file=taobao.keystore
 taobao.ssl.cert.file.password=huofo141005
 taobao.login.url=https://login.taobao.com/member/login.jhtml?goto=http%3A%2F%2Fwww.taobao.com%2F
-
-weibo.host=weibo.com
