[OPT] 调整资源配置统一由HttpConfigUtils管理，并放在resource目录下

--- a/src/main/resource/properties/http.config.properties
+++ b/src/main/resource/properties/http.config.properties
@@ -1,7 +1,7 @@
 http.max.per.route=100
 
-taobao.ssl.cert.file=taobao.keystore
-taobao.ssl.cert.file.password=huofo141005
+taobao.ssl.cert.file=ssl/taobao.keystore
+taobao.ssl.cert.file.pass=huofo141005
 taobao.login.url=https://login.taobao.com/member/login.jhtml?goto=http%3A%2F%2Fwww.taobao.com%2F
 
 lianzhong.user=yan8755
