--- a/src/main/resource/properties/http.config.properties
+++ b/src/main/resource/properties/http.config.properties
@@ -3,6 +3,10 @@ http.max.per.route=100
 taobao.ssl.cert.file=ssl/taobao.keystore
 taobao.ssl.cert.file.pass=huofo141005
 taobao.login.url=https://login.taobao.com/member/login.jhtml?goto=http%3A%2F%2Fwww.taobao.com%2F
+taobao.weibo.login.url.link.class=a.weibo-login
+
+weibo.prelogin.url=http://login.sina.com.cn/sso/prelogin.php
+weibo.prelogin.url.default.params=entry=weibo&callback=sinaSSOController.preloginCallBack&rsakt=mod&checkpin=1&client=ssologin.js(v1.4.18)
 
 lianzhong.user=yan8755
 lianzhong.pass=FFFfff111
