[Mod] 更新获取微博验证码url

--- a/src/main/resource/properties/http.config.properties
+++ b/src/main/resource/properties/http.config.properties
@@ -10,3 +10,5 @@ weibo.prelogin.url.default.params=entry=weibo&callback=sinaSSOController.prelogi
 
 lianzhong.user=yan8755
 lianzhong.pass=FFFfff111
+
+weibo.verifycode.url=http://login.sina.com.cn/cgi/pin.php
