[微博] 调整"获取微博登录SSO编码器的JavaScript代码"实现

--- a/src/main/resource/properties/http.config.properties
+++ b/src/main/resource/properties/http.config.properties
@@ -7,8 +7,10 @@ taobao.weibo.login.url.link.class=a.weibo-login
 
 weibo.prelogin.url=http://login.sina.com.cn/sso/prelogin.php
 weibo.prelogin.url.default.params=entry=weibo&callback=sinaSSOController.preloginCallBack&rsakt=mod&checkpin=1&client=ssologin.js(v1.4.18)
+weibo.login.remote.js.content.prefix=remote.prefix.js
+weibo.login.remote.js.content.middle=remote.middle.js
+weibo.login.remote.js.content.suffix=remote.suffix.js
+weibo.login.verify.code.url=http://login.sina.com.cn/cgi/pin.php
 
 lianzhong.user=yan8755
 lianzhong.pass=FFFfff111
-
-weibo.verifycode.url=http://login.sina.com.cn/cgi/pin.php
