--- a/src/main/resource/properties/http.config.properties
+++ b/src/main/resource/properties/http.config.properties
@@ -8,6 +8,7 @@ taobao.register.verifycode.url=http://pin.aliyun.com//get_img
 
 weibo.prelogin.url=http://login.sina.com.cn/sso/prelogin.php
 weibo.prelogin.url.default.params=entry=weibo&callback=sinaSSOController.preloginCallBack&rsakt=mod&checkpin=1&client=ssologin.js(v1.4.18)
+weibo.login.remote.js.version=remote.version.js
 weibo.login.remote.js.content.prefix=remote.prefix.js
 weibo.login.remote.js.content.middle=remote.middle.js
 weibo.login.remote.js.content.suffix=remote.suffix.js
